feat: WIP - add reactive web and caching with h2 db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=league-ladder
 api.baseUrl=https://apiv3.apifootball.com
 api.key=API_KEY
-spring.datasource.url=jdbc:h2:mem:leagueladder
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=admin
-spring.datasource.password=password
-spring.h2.console.enabled=true
+spring.r2dbc.url=r2dbc:h2:mem:///leagueladder
+spring.r2dbc.username=admin
+spring.r2dbc.password=password
+spring.sql.init.mode=always
+spring.sql.init.platform=h2
+logging.level.org.springframework.r2dbc=DEBUG
