--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,27 @@
 spring.application.name=league-ladder
+
+# API Configuration
 api.baseUrl=https://apiv3.apifootball.com
 api.key=API_KEY
+
+# H2 Database Configuration
 spring.r2dbc.url=r2dbc:h2:mem:///leagueladder
 spring.r2dbc.username=admin
 spring.r2dbc.password=password
 spring.sql.init.mode=always
 spring.sql.init.platform=h2
-logging.level.org.springframework.r2dbc=DEBUG
+
+# Resilience4j Circuit Breaker Configuration
+resilience4j.circuitbreaker.instances.leagueLadderClient.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.leagueLadderClient.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.leagueLadderClient.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.leagueLadderClient.waitDurationInOpenState=30s
+resilience4j.circuitbreaker.instances.leagueLadderClient.permittedNumberOfCallsInHalfOpenState=3
+
+# Resilience4j Time Limiter Configuration
+resilience4j.timelimiter.instances.leagueLadderClient.timeoutDuration=2s
+
+# Logging Configuration
+#logging.level.io.r2dbc=DEBUG
+logging.level.dev.kartikdewal.leagueladder=DEBUG
+logging.level.org.springframework=WARN
