feat: add basic auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,8 @@ resilience4j.timelimiter.instances.leagueLadderClient.timeoutDuration=2s
 #logging.level.io.r2dbc=DEBUG
 logging.level.dev.kartikdewal.leagueladder=DEBUG
 logging.level.org.springframework=WARN
+
+# Basic Auth User
+user.username=user
+user.password=password
+user.roles=USER
