refactor: service and controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ resilience4j.timelimiter.instances.leagueLadderClient.timeoutDuration=2s
 
 # Logging Configuration
 #logging.level.io.r2dbc=DEBUG
-logging.level.dev.kartikdewal.leagueladder=DEBUG
+logging.level.dev.kartikdewal.leagueladder=INFO
 logging.level.org.springframework=WARN
 
 # Basic Auth User
